[gd_scene load_steps=14 format=2]

[ext_resource path="res://Regions/Prefab1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Rock.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/RootBeer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/CRT_Shader.tres" type="Shader" id=5]
[ext_resource path="res://Assets/Sound/saloonTune.mp3" type="AudioStream" id=6]
[ext_resource path="res://Regions/Camera2DHelper.gd" type="Script" id=7]
[ext_resource path="res://Regions/TimerScript.gd" type="Script" id=8]
[ext_resource path="res://Regions/StartTrigger.gd" type="Script" id=9]
[ext_resource path="res://Regions/StopArea2D.gd" type="Script" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/showShader = true
shader_param/overlay = false
shader_param/scanlines_opacity = 0.4
shader_param/scanlines_width = 0.25
shader_param/grille_opacity = 0.3
shader_param/resolution = Vector2( 640, 480 )
shader_param/pixelate = true
shader_param/roll = true
shader_param/roll_speed = 8.0
shader_param/roll_size = 15.0
shader_param/roll_variation = 1.8
shader_param/distort_intensity = 0.05
shader_param/noise_opacity = 0.4
shader_param/noise_speed = 5.0
shader_param/static_noise_intensity = 0.06
shader_param/aberration = 0.03
shader_param/brightness = 1.4
shader_param/discolor = true
shader_param/warp_amount = 1.0
shader_param/vignette_intensity = 0.4
shader_param/vignette_opacity = 0.5

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 48.5, 6 )

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 65.5, 3 )

[node name="Game" type="Node2D"]

[node name="Level" type="Node2D" parent="."]

[node name="Prefab1" parent="Level" instance=ExtResource( 1 )]

[node name="RootBeer" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 47, -224 )

[node name="RootBeer2" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 184, -608 )

[node name="RootBeer3" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 158, -1056 )

[node name="RootBeer4" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 26, -1312 )

[node name="RootBeer5" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 280, -2080 )

[node name="RootBeer6" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 48, -2593 )

[node name="RootBeer7" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 40, -3344 )

[node name="RootBeer8" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 270, -3600 )

[node name="RootBeer9" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 191, -4256 )

[node name="Rock" parent="Level" instance=ExtResource( 3 )]
position = Vector2( 165, -594 )

[node name="Rock2" parent="Level" instance=ExtResource( 3 )]
position = Vector2( 156, -977 )

[node name="Rock3" parent="Level" instance=ExtResource( 3 )]
position = Vector2( 257, -1360 )

[node name="Rock4" parent="Level" instance=ExtResource( 3 )]
position = Vector2( 166, -2000 )

[node name="Rock5" parent="Level" instance=ExtResource( 3 )]
position = Vector2( 160, -2705 )

[node name="Rock6" parent="Level" instance=ExtResource( 3 )]
position = Vector2( 201, -3217 )

[node name="Rock7" parent="Level" instance=ExtResource( 3 )]
position = Vector2( 196, -3958 )

[node name="Rock8" parent="Level" instance=ExtResource( 3 )]
position = Vector2( 168, -4624 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, -30 )
current = true
limit_left = 0
limit_right = 320
limit_bottom = 0
position_smoothing_speed = 10.0
script = ExtResource( 7 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Camera2D"]
remote_path = NodePath("../../CRTShader")

[node name="ColorRect2" type="ColorRect" parent="Camera2D"]
offset_left = -135.0
offset_top = 55.0
offset_right = -81.0
offset_bottom = 80.0

[node name="ColorRect" type="ColorRect" parent="Camera2D/ColorRect2"]
offset_left = 2.0
offset_top = 2.0
offset_right = 52.0
offset_bottom = 23.0
color = Color( 0.14902, 0.168627, 0.266667, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Camera2D/ColorRect2"]
offset_left = 7.0
offset_top = 7.0
offset_right = 60.0
offset_bottom = 22.0
text = "9:59:9"
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="Camera2D/ColorRect2/RichTextLabel"]
wait_time = 0.1
autostart = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 280, -30 )

[node name="CRTShader" type="Node2D" parent="."]
position = Vector2( 160, -30 )

[node name="SubViewportContainer" type="SubViewportContainer" parent="CRTShader"]
material = SubResource( 1 )
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
offset_bottom = 120.0

[node name="SubViewport" type="SubViewport" parent="CRTShader/SubViewportContainer"]
size = Vector2( 320, 240 )
handle_input_locally = false
render_target_update_mode = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true

[node name="StartTrigger" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartTrigger"]
position = Vector2( 51.5, -136 )
shape = SubResource( 2 )

[node name="StopTrigger" type="Area2D" parent="."]
position = Vector2( -171, -160 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StopTrigger"]
position = Vector2( 329, -4828 )
shape = SubResource( 3 )

[connection signal="root_collected" from="Level/RootBeer" to="Player" method="_on_RootBeer_root_collected"]
[connection signal="root_collected" from="Level/RootBeer2" to="Player" method="_on_RootBeer_root_collected"]
[connection signal="root_collected" from="Level/RootBeer3" to="Player" method="_on_RootBeer_root_collected"]
[connection signal="root_collected" from="Level/RootBeer4" to="Player" method="_on_RootBeer_root_collected"]
[connection signal="root_collected" from="Level/RootBeer5" to="Player" method="_on_RootBeer_root_collected"]
[connection signal="root_collected" from="Level/RootBeer6" to="Player" method="_on_RootBeer_root_collected"]
[connection signal="root_collected" from="Level/RootBeer7" to="Player" method="_on_RootBeer_root_collected"]
[connection signal="root_collected" from="Level/RootBeer8" to="Player" method="_on_RootBeer_root_collected"]
[connection signal="root_collected" from="Level/RootBeer9" to="Player" method="_on_RootBeer_root_collected"]
[connection signal="timeout" from="Camera2D/ColorRect2/RichTextLabel/Timer" to="Camera2D/ColorRect2/RichTextLabel" method="_on_Timer_timeout"]
[connection signal="body_entered" from="StartTrigger" to="StartTrigger" method="_on_StartTrigger_body_entered"]
[connection signal="start_timer" from="StartTrigger" to="Camera2D/ColorRect2/RichTextLabel" method="_on_StartTrigger_start_timer"]
[connection signal="body_entered" from="StopTrigger" to="StopTrigger" method="_on_StopTrigger_body_entered"]
[connection signal="stop_timer" from="StopTrigger" to="Camera2D/ColorRect2/RichTextLabel" method="_on_StopTrigger_stop_timer"]
